@@ -2,12 +2,23 @@ Skia Graphics Release Notes
 
 This file includes a list of high level updates for each milestone release.
 
+Milestone 97
+------------
+  * Added basic support for vulkan DRM modifiers. All of these are treated as read only textures
+    internally (versus querying specific modifier support). Clients can either pass a flag to Vulkan
+    GrBackendFormat to say it uses modifiers or pass the VK_IMAGE_TILING_DRM_FORMAT_MODIFIER_EXT
+    to a GrBackendTexture via the GrVkImageInfo struct.
+
+* * *
+
 Milestone 96
 ------------
   * SkRuntimeEffect no longer clamps the RGB values of an effect's output to the range 0..A.
     This makes it easier to use a hierarchy of SkSL shaders where intermediate values do not
     represent colors but are, for example, non-color inputs to a lighting model.
     http://review.skia.org/452558
+
+* * *
 
 Milestone 95
 ------------
